--- a/experiments/test_runs/annotation_experiment_llama2_p1.ipynb
+++ b/experiments/test_runs/annotation_experiment_llama2_p1.ipynb
@@ -1105,7 +1105,7 @@
     "# Save annotations to csv\n",
     "\"\"\"\n",
     "from pathlib import Path  \n",
-    "filepath = Path(\"../output/annotations/experiment_2.csv\")\n",
+    "filepath = Path(\"../output/annotations/experiment_1.csv\")\n",
     "df.to_csv(filepath)  \n",
     "\"\"\""
    ]
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1251,14 +1251,14 @@
        "4                                        content='0'  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"../output/annotations/experiment_1.csv\")\n",
+    "df = pd.read_csv(\"../../output/annotations/experiment_llama_prompt_1.csv\")\n",
     "df.head()"
    ]
   },
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,14 +1341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wv/j42m3p7n5jl51rggmnpn_6940000gn/T/ipykernel_65525/1219482065.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/wv/j42m3p7n5jl51rggmnpn_6940000gn/T/ipykernel_76684/1219482065.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1448,12 +1448,23 @@
     "    for j in range(cm.shape[1]):\n",
     "        plt.text(j, i, str(cm[i, j]), ha='center', va='center', color='grey')\n",
     "\n",
+    "# save confusion matrix\n",
+    "import os\n",
+    "if not os.path.exists(\"../../output/evaluation/llama_prompt_1\"):\n",
+    "    os.makedirs(\"../../output/evaluation/llama_prompt_1\")\n",
+    "plt.savefig(\"../../output/evaluation/llama_prompt_1/confusion_matrix.png\")\n",
+    "\n",
     "plt.colorbar()\n",
     "plt.ylabel('True label')\n",
     "plt.xlabel('Predicted label')\n",
     "plt.show()\n",
     "\n",
-    "print(classification_report(df_booleans[\"Biased\"], df_booleans[\"Prediction_to_Boolean\"]))\n"
+    "print(classification_report(df_booleans[\"Biased\"], df_booleans[\"Prediction_to_Boolean\"]))\n",
+    "\n",
+    "# save classification \n",
+    "report = classification_report(df_booleans[\"Biased\"], df_booleans[\"Prediction_to_Boolean\"])\n",
+    "with open(\"../../output/evaluation/llama_prompt_1/classification_report.txt\", \"w\") as file:\n",
+    "    file.write(report)"
    ]
   },
   {
@@ -1480,7 +1491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
